# pretix-acd

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_acd/: apps.py  settings.py
pretix_acd/locale/de_Informal/LC_MESSAGES/: django.po
