[project]
name = "pretix-acd"
dynamic = ["version"]
description = "Enable global Molliee key setting."
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "ICT Commissie", email = "ict@acdweb.nl"},
]
maintainers = [
    {name = "ICT Commissie", email = "ict@acdweb.nl"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_acd = "pretix_acd:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/Amsterdams-Chemisch-Dispuut/pretix-acd"
repository = "https://github.com/Amsterdams-Chemisch-Dispuut/pretix-acd"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_acd.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
